2009-03-18  Johannes Schmid  <jhs@gnome.org>

	* configure.in: Bumped version to 2.27.0

2009-03-18  Joel Holdsworth <joel@airwebreathe.org.uk>

	* gdl/Makefile.am:
	* gdl/gdl-dock-item-grip.c (gdl_dock_item_create_label_widget),
	(gdl_dock_item_grip_item_notify), (gdl_dock_item_grip_destroy),
	(gdl_dock_item_grip_instance_init), (gdl_dock_item_grip_realize),
	(gdl_dock_item_grip_unrealize), (gdl_dock_item_grip_size_request),
	(gdl_dock_item_grip_size_allocate), (gdl_dock_item_grip_forall),
	(gdl_dock_item_grip_class_init), (gdl_dock_item_grip_set_label):
	* gdl/gdl-dock-item-grip.h:
	* gdl/gdl-dock-item.c (gdl_dock_item_get_grip):
	* gdl/gdl-dock-item.h:
	#575367 – Patches for reworking grips

2009-03-16  Johannes Schmid  <jhs@gnome.org>

	* NEWS: Update for release
	* configure.in: Bumped version to 2.26.0

2009-03-04  Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>

	* gdl/gdl-switcher.c (layout_buttons):
	#574172 – shutup valgrind

2009-03-04  Johannes Schmid  <jhs@gnome.org>

	* Makefile.am: Fix distcheck

2009-03-02  Johannes Schmid  <jhs@gnome.org>

	* MAINTAINERS: Added myself
	* NEWS: Update for release
	* configure.in: Bumped version

=== gdl 2.25.92 ===

2009-03-01  Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_realize),
	(gdl_dock_item_grip_size_request),
	(gdl_dock_item_grip_size_allocate):
	#573522 – More patches for GDL
	(Thanks much to Joel Holdsworth <joel@airwebreathe.org.uk> for the patches)
	
	* gdl/gdl-dock-item.c:
	Add documentation for gdl_dock_item_set_default_position()

2009-02-26  Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock.c (gdl_dock_select_larger_item):
	Remove a stupid warning for a forgotten placement case.

2008-02-22  Sébastien Granjoux  <seb.sfo@free.fr>

	* gdl/gdl-dock-item.c:
	Fix #566801 – Docking+undocking all makes the buttons disappear and
	crashes if you use "Reset dock layout"

=== gdl 2.25.91 ===

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* NEWS:
	* configure.in: