@@ -1,3 +1,9 @@
+2009-03-26  Johannes Schmid  <jhs@gnome.org>
+
+	Patch from Deniz Koçak <lenduha@gmail.com>	
+	* gdl/gdl-dock-layout.c:
+	Add gtk-doc comments
+
 2009-03-18  Johannes Schmid  <jhs@gnome.org>
 
 	* configure.in: Bumped version to 2.27.0
